[tool.poetry]
name = "stream-tools"
version = "0.2.0"
description = ""
authors = ["Mattia Terenzi <m.terenzi92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aioredis = "^1.3.1"
uvloop = "^0.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
