[project]
name = "stream-tools"
version = "0.3.0"
description = "Some wrappers to ease the development of Redis Stream based app"
authors = ["Mattia Terenzi <m.terenzi92@gmail.com>"]
license = "MIT"
readme = "README.md"
python = "^3.7"
homepage = "https://github.com/deltaleap/stream_tools"
repository = "https://github.com/deltaleap/stream_tools"

keywords = ["stream", "redis", "async"]

[dependencies]
aioredis = "^1.3.1"
uvloop = "^0.14.0"
numpy = "^1.19.4"

[dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
