[metadata]
name = stream-tools
version = 0.3.0
description = Some wrappers to ease the development of Redis Stream based app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deltaleap/stream-tools
author = Mattia Terenzi
author_email = m.terenzi92@gmail.com
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
	aioredis>=1.3.1
	uvloop>=0.14.0
	numpy>=1.19.4
python_requires = >=3.7

[bdist_wheel]
universal = True

[flake8]
max-line-length = 89
exclude = .env
count = true
statistics = true

[mypy]
mypy_path = ./stubs
strict_equality = True
disallow_untyped_defs = True
